bitfields/tests/compile_error_cases/errors/bitfield_field_access_reserved_value.stderr
error[E0599]: no method named `_reserved` found for struct `Bitfield` in the current scope
  --> tests/compile_error_cases/errors/bitfield_field_access_reserved_value.rs:15:25
   |
 3 | #[bitfield(u64)]
   | ---------------- method `_reserved` not found for this struct
...
15 |     assert_eq!(bitfield._reserved(), 0x1);
   |                         ^^^^^^^^^ method not found in `Bitfield`
